# graphics-lab-2

./: CMakeLists.txt  Notes.md
cmake/: FindGLFW3.cmake
rsc/shaders/: gl_lineVertexShader.glsl  gl_textFragmentShader.glsl  gl_textVertexShader.glsl  gl_vertexShader.h
src/: LinesRenderer.cpp  LinesRenderer.h  Shader.cpp  Shader.h  SquaresRenderer.cpp  SquaresRenderer.h  TextRenderer.cpp  TextRenderer.h  defines.cpp  defines.h  gl_fragmentShader.h  gl_vertexShader.h  glad.c  main.cpp
src/glad/: glad.c  glad.h
